tests/fixtures/invalid/float_ge_dict.py
# Cannot compare with >= Float and Dict[str, int]
x: bool = 1.0 >= {"a": 1}
